# digit-recognition

./: .gitignore  CMakeLists.txt  README.md
cnn/: cnn_predict.lua  cnn_train.lua
gui/: CMakeLists.txt  canvas_widget.cpp  canvas_widget.hpp  classifier.hpp  digit_widget.cpp  digit_widget.hpp  digit_widget.ui  lua_classifier.cpp  lua_classifier.hpp  main.cpp
mlp/: mlp_predict.lua  mlp_train.lua
net/: train.lua
